dev/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: endpointslice-myapp-serv-abcde
  namespace: dev
  labels:
    kubernetes.io/service-name: myapp-serv
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8888
endpoints:
  - addresses:
      - "10.43.90.165"
    conditions:
      ready: true
    # hostname: pod-1
    nodeName: k3d-mycluster-server-0
    zone: us-west2-a
