dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-serv
spec:
  selector:
    app: myapp
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
